# winhlp

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
doc/ref/: compat.c  helpdeco.h
docs/: helpfile.md
scripts/: collect_coverage_files.py  collect_test_files.py  extract_hlp_files.py  fetch_corpus.py
src/winhlp/: __init__.py  __main__.py  utils.py
src/winhlp/lib/: __init__.py  ann.py  btree.py  compression.py  directory.py  exceptions.py  hlp.py  html.py  picture.py  text_utils.py
src/winhlp/lib/internal_files/: __init__.py  base.py  bitmap.py  catalog.py  cfn.py  chartab.py  context.py  ctxomap.py  font.py  gid.py  gmacros.py  grp.py  keywords.py  petra.py  phrase.py  phrimage.py  phrindex.py  rose.py  system.py  tomap.py  topic.py  topicid.py  ttlbtree.py  viola.py  win95.py  xwbtree.py  xwdata.py  xwmap.py
tests/: test_content.py  test_context_comprehensive.py  test_derive_context_id.py  test_e2e.py  test_hlp.py  test_html.py  test_json_dump.py  test_json_output.py  test_reverse_hash.py  test_sidecars.py
tests/data/: .gitignore  FXSEARCH.HLP  FXUNDEL.HLP  SMARTTOP.HLP
tests/data/errors/: .gitignore
tests/data/win95/: MSNINT.HLP
