[project]
name = "winhlp"
description = "Windows HLP file reader"
version = "0.1.0"
authors = [
    { name = "Gareth Davidson", email = "gaz@bitplane.net" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic"
]

[project.urls]
Homepage = "https://bitplane.net/dev/python/winhlp"
Repository = "https://github.com/bitplane/winhlp"
"Bug Tracker" = "https://github.com/bitplane/winhlp/issues"

[project.scripts]
winhlp = "winhlp.__main__:main"

[project.optional-dependencies]
html = [
    "pillow"  # optional: convert extracted bitmaps to PNG for --html output
]
dev = [
    "pre-commit",
    "pytest",
    "coverage",
    "pytest-cov",
    "build",
    "twine",
    "ruff",
    "pillow",
    "pydoc-markdown"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
